fp-macros/tests/ui/duplicate_document_signature_module.stderr
error: cannot find attribute `document_signature` in this scope
  --> tests/ui/duplicate_document_signature_module.rs:10:4
   |
10 |     #[document_signature]
   |       ^^^^^^^^^^^^^^^^^^
   |
help: consider importing one of these attribute macros
   |
 9 +     use fp_library::document_signature;
   |
 9 +     use fp_macros::document_signature;
   |
